navbar Update Index.html

--- a/Index.html
+++ b/Index.html
@@ -13,11 +13,12 @@
     <div class="barra">
         
         <img class="logo" src="midia/logo.jpg">
-        <button class="btnav"><a href="">Home</a></button>
-        <button class="btnav"><a href="">Verder</a></button>
-        <button class="btnav"><a href="">Comprar</a></button>
-        <button class="btnav"><a href="">filtro</a></button>
-
+        <nav class="menu">
+            <button class="btnav"><a href="">Home</a></button>
+            <button class="btnav"><a href="">Verder</a></button>
+            <button class="btnav"><a href="">Comprar</a></button>
+            <button class="btnav"><a href="">filtro</a></button>
+        </nav>
     </div>
 
 </body>
