Inicio do meio e fim

--- a/Index.html
+++ b/Index.html
@@ -20,6 +20,22 @@
             <button class="btnav"><a href="">filtro</a></button>
         </nav>
     </div>
-
+    <div class="meio">
+        <img class="img" src="midia/img1.jpg"> 
+    </div>
+    <div class="fim">
+        <div class="divf1">
+            <img class="uno" src="Midia/uno_escada.jpg">
+        </div>
+        <div class="divf2">
+            <img class="fusca" src="Midia/fusca.jpg">
+        </div>
+        <div class="divf3">
+            <img class="ferrari" src="Midia/ferrari.jpg">
+        </div>
+        <div class="divf4">
+            <img class="opala" src="Midia/opala.jpg">
+        </div>
+    </div>
 </body>
 </html>
