--- a/Index.html
+++ b/Index.html
@@ -11,13 +11,12 @@
 </head>
 <body>
     <div class="barra">
-        
         <img class="logo" src="midia/logo.jpg">
         <nav class="menu">
-            <button class="btnav"><a href="">Home</a></button>
-            <button class="btnav"><a href="">Verder</a></button>
-            <button class="btnav"><a href="">Comprar</a></button>
-            <button class="btnav"><a href="">filtro</a></button>
+            <button class="Home"><a href="">Home</a></button>
+            <button class="Vender"><a href="">Vender</a></button>
+            <button class="Comprar"><a href="">Comprar</a></button>
+            <button class="filtro"><a href="">filtro</a></button>
         </nav>
     </div>
     <div class="meio">
