--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script  src="./script.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="controle.js"></script>
 
@@ -24,16 +26,20 @@
     </div>
     <div class="fim">
         <div class="divf1">
-            <img class="uno" src="Midia/uno_escada.jpg">
+            <img class="fotos_carros" src="Midia/uno_escada.jpg">
+            <h4 class="text">Uno com escada em cima</h4>
         </div>
-        <div class="divf2">
-            <img class="fusca" src="Midia/fusca.jpg">
+        <div class="divf1">
+            <img class="fotos_carros" src="Midia/bug.jpg">
+            <h4 class="text">Bugatti Veyron </h4>
         </div>
-        <div class="divf3">
-            <img class="ferrari" src="Midia/ferrari.jpg">
+        <div class="divf1">
+            <img class="fotos_carros" src="Midia/ferrari.jpg">
+            <h4 class="text">Ferrari</h4>
         </div>
-        <div class="divf4">
-            <img class="opala" src="Midia/opala.jpg">
+        <div class="divf1">
+            <img class="fotos_carros" src="Midia/rato.png">
+            <h4 class="text">Super carro de rato</h4>
         </div>
     </div>
 </body>
