--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script  src="./script.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="controle.js"></script>
 
@@ -24,23 +23,60 @@
     <div class="meio">
         <img class="img" src="midia/img1.jpg"> 
     </div>
-    <div class="fim">
-        <div class="divf1">
+    <div class="produtos">
+        <div class="divF1">
             <img class="fotos_carros" src="Midia/uno_escada.jpg">
-            <h4 class="text">Uno com escada em cima</h4>
+            <div class="divf1">
+                <h5 class="titul">Uno com escada</h5>
+                <p >Descricao</p>
+                <button class="butao">Comprar</button>
+                
+            </div>
         </div>
-        <div class="divf1">
+        <div class="divF1">
             <img class="fotos_carros" src="Midia/bug.jpg">
-            <h4 class="text">Bugatti Veyron </h4>
+            <div class="divf1">
+                <h5 class="titul">Bugatti Veyron </h5>
+                <p>Descricao</p>
+                <button class="butao">Comprar</button>
+            </div>
         </div>
-        <div class="divf1">
-            <img class="fotos_carros" src="Midia/ferrari.jpg">
-            <h4 class="text">Ferrari</h4>
+        <div class="divF1">
+            <img class="fotos_carros" src="Midia/chevette-junior.jpg">
+            <div class="divf1">
+                <h5 class="titul">chevette-junior</h5>
+                <p>Descricao</p>
+                <button class="butao">Comprar</button>
+            </div>
+            
         </div>
-        <div class="divf1">
+        <div class="divF1">
             <img class="fotos_carros" src="Midia/rato.png">
-            <h4 class="text">Super carro de rato</h4>
+            <div class="divf1">
+                <h5 class="titul">Super carro de rato</h5>
+                <p>Descricao</p>
+                <button class="butao">Comprar</button>
+            </div>
         </div>
+        <div class="divF1">
+            <img class="fotos_carros" src="Midia/volkswagen_gol.jpeg">
+            <div class="divf1">
+                <h5 class="titul">Gol</h5>
+                <p>Descricao</p>
+                <button class="butao">Comprar</button>
+            </div>
+        </div>
+        <div class="divF1">
+            <img class="fotos_carros" src="Midia/volkswagen_fusca.jpg">
+            <div class="divf1">
+                <h5 class="titul">Fusca</h5>
+                <p>Descricao</p>
+                <button class="butao">Comprar</button>
+            </div>
+        </div>
+    </div>
+    <div class="rodape">
+
     </div>
 </body>
 </html>
