Fim do index, criacao de login

--- a/Index.html
+++ b/Index.html
@@ -19,6 +19,7 @@
             <button class="Comprar"><a href="">Comprar</a></button>
             <button class="filtro"><a href="">filtro</a></button>
         </nav>
+        <button class="entrar"><a href="">Entrar</a></button>
     </div>
     <div class="meio">
         <img class="img" src="midia/img1.jpg"> 
@@ -28,7 +29,9 @@
             <img class="fotos_carros" src="Midia/uno_escada.jpg">
             <div class="divf1">
                 <h5 class="titul">Uno com escada</h5>
-                <p >Descricao</p>
+                <p class="desc">Modelo:</p>
+                <p class="desc">Ano:</p>
+                <p class="desc">Cor:</p>
                 <button class="butao">Comprar</button>
                 
             </div>
@@ -37,7 +40,9 @@
             <img class="fotos_carros" src="Midia/bug.jpg">
             <div class="divf1">
                 <h5 class="titul">Bugatti Veyron </h5>
-                <p>Descricao</p>
+                <p class="desc">Modelo:</p>
+                <p class="desc">Ano:</p>
+                <p class="desc">Cor:</p>
                 <button class="butao">Comprar</button>
             </div>
         </div>
@@ -45,7 +50,9 @@
             <img class="fotos_carros" src="Midia/chevette-junior.jpg">
             <div class="divf1">
                 <h5 class="titul">chevette-junior</h5>
-                <p>Descricao</p>
+                <p class="desc">Modelo:</p>
+                <p class="desc">Ano:</p>
+                <p class="desc">Cor:</p>
                 <button class="butao">Comprar</button>
             </div>
             
@@ -54,7 +61,9 @@
             <img class="fotos_carros" src="Midia/rato.png">
             <div class="divf1">
                 <h5 class="titul">Super carro de rato</h5>
-                <p>Descricao</p>
+                <p class="desc">Modelo:</p>
+                <p class="desc">Ano:</p>
+                <p class="desc">Cor:</p>
                 <button class="butao">Comprar</button>
             </div>
         </div>
@@ -62,7 +71,9 @@
             <img class="fotos_carros" src="Midia/volkswagen_gol.jpeg">
             <div class="divf1">
                 <h5 class="titul">Gol</h5>
-                <p>Descricao</p>
+                <p class="desc">Modelo:</p>
+                <p class="desc">Ano:</p>
+                <p class="desc">Cor:</p>
                 <button class="butao">Comprar</button>
             </div>
         </div>
@@ -70,13 +81,17 @@
             <img class="fotos_carros" src="Midia/volkswagen_fusca.jpg">
             <div class="divf1">
                 <h5 class="titul">Fusca</h5>
-                <p>Descricao</p>
+                <p class="desc">Modelo:</p>
+                <p class="desc">Ano:</p>
+                <p class="desc">Cor:</p>
                 <button class="butao">Comprar</button>
             </div>
         </div>
     </div>
     <div class="rodape">
-
+        <img class="logof" src="midia/logo.jpg">
+        <h5 class="textRodape">Dono do site: Nathanael</h5>
+        <h5 class="textRodape">Numero de Contato: 4002-8922</h5>
     </div>
 </body>
 </html>
