login e inicio de cadrastro/fazer script

--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
             <button class="Comprar"><a href="">Comprar</a></button>
             <button class="filtro"><a href="">filtro</a></button>
         </nav>
-        <button class="entrar"><a href="">Entrar</a></button>
+        <button class="entrar"><a href="Login.html">Entrar</a></button>
     </div>
     <div class="meio">
         <img class="img" src="midia/img1.jpg"> 
