--- a/Index.html
+++ b/Index.html
@@ -29,9 +29,7 @@
             <img class="fotos_carros" src="Midia/uno_escada.jpg">
             <div class="divf1">
                 <h5 class="titul">Uno com escada</h5>
-                <p class="desc">Modelo:</p>
-                <p class="desc">Ano:</p>
-                <p class="desc">Cor:</p>
+                <p class="preco">R$:5.230.400,00</p>
                 <button class="butao">Comprar</button>
                 
             </div>
@@ -40,9 +38,7 @@
             <img class="fotos_carros" src="Midia/bug.jpg">
             <div class="divf1">
                 <h5 class="titul">Bugatti Veyron </h5>
-                <p class="desc">Modelo:</p>
-                <p class="desc">Ano:</p>
-                <p class="desc">Cor:</p>
+                <p class="preco">R$:</p>
                 <button class="butao">Comprar</button>
             </div>
         </div>
@@ -50,9 +46,7 @@
             <img class="fotos_carros" src="Midia/chevette-junior.jpg">
             <div class="divf1">
                 <h5 class="titul">chevette-junior</h5>
-                <p class="desc">Modelo:</p>
-                <p class="desc">Ano:</p>
-                <p class="desc">Cor:</p>
+                <p class="preco">R$:</p>
                 <button class="butao">Comprar</button>
             </div>
             
@@ -61,9 +55,7 @@
             <img class="fotos_carros" src="Midia/rato.png">
             <div class="divf1">
                 <h5 class="titul">Super carro de rato</h5>
-                <p class="desc">Modelo:</p>
-                <p class="desc">Ano:</p>
-                <p class="desc">Cor:</p>
+                <p class="preco">R$:2.125.000,00</p>
                 <button class="butao">Comprar</button>
             </div>
         </div>
@@ -71,9 +63,7 @@
             <img class="fotos_carros" src="Midia/volkswagen_gol.jpeg">
             <div class="divf1">
                 <h5 class="titul">Gol</h5>
-                <p class="desc">Modelo:</p>
-                <p class="desc">Ano:</p>
-                <p class="desc">Cor:</p>
+                <p class="preco">R$:</p>
                 <button class="butao">Comprar</button>
             </div>
         </div>
@@ -81,9 +71,7 @@
             <img class="fotos_carros" src="Midia/volkswagen_fusca.jpg">
             <div class="divf1">
                 <h5 class="titul">Fusca</h5>
-                <p class="desc">Modelo:</p>
-                <p class="desc">Ano:</p>
-                <p class="desc">Cor:</p>
+                <p class="preco">R$:</p>
                 <button class="butao">Comprar</button>
             </div>
         </div>
