--- a/Login.html
+++ b/Login.html
@@ -16,7 +16,7 @@
                 <input type="email" placeholder="Digite seu e-mail" autofocus="true" />
                 <label for="password">Senha</label>
                 <input type="password" placeholder="Digite sua senha" />
-                <p><a href="cadrastro"></a>cadrastro</p>
+                <p><a class="link"href="Cadrastro.html">Cadrastro</a></p>
                 <input type="submit" value="Acessar" class="btn" onclick="bt_login"/>
             </form>
         </div>
