tela de comprar

--- a/Index.html
+++ b/Index.html
@@ -38,7 +38,7 @@
             <img class="fotos_carros" src="Midia/bug.jpg">
             <div class="divf1">
                 <h5 class="titul">Bugatti Veyron </h5>
-                <p class="preco">R$:</p>
+                <p class="preco">R$:4.432.200,00</p>
                 <button class="butao">Comprar</button>
             </div>
         </div>
@@ -46,7 +46,7 @@
             <img class="fotos_carros" src="Midia/chevette-junior.jpg">
             <div class="divf1">
                 <h5 class="titul">chevette-junior</h5>
-                <p class="preco">R$:</p>
+                <p class="preco">R$:2.900.100,00</p>
                 <button class="butao">Comprar</button>
             </div>
             
@@ -63,7 +63,7 @@
             <img class="fotos_carros" src="Midia/volkswagen_gol.jpeg">
             <div class="divf1">
                 <h5 class="titul">Gol</h5>
-                <p class="preco">R$:</p>
+                <p class="preco">R$:3.542.400,00</p>
                 <button class="butao">Comprar</button>
             </div>
         </div>
@@ -71,7 +71,7 @@
             <img class="fotos_carros" src="Midia/volkswagen_fusca.jpg">
             <div class="divf1">
                 <h5 class="titul">Fusca</h5>
-                <p class="preco">R$:</p>
+                <p class="preco">R$:7.500.300,00</p>
                 <button class="butao">Comprar</button>
             </div>
         </div>
